--- a/miniapp/pages/menu/menu.wxml
+++ b/miniapp/pages/menu/menu.wxml
@@ -18,13 +18,14 @@
       <t-side-bar-item wx:for="{{categories}}" wx:key="index" value="{{index}}" label="{{item.label}}" />
     </t-side-bar>
     <view class="content" style="transform: translateY(-{{sideBarIndex * 100}}%)">
-
       <scroll-view class="section" wx:for="{{categories}}" scroll-y scroll-top="{{scrollTop}}" scroll-with-animation show-scrollbar="{{false}}">
         <view>
           <block wx:for="{{commodityNames}}" wx:key="index" wx:for-item="commodity">
             <view class="view-right" data-commodityId="commodityId">
               <view style="margin-right: 20rpx;">
+                <navigator url="/pages/menu/product/product"  bindtap="navigateToDetail" data-commodity-id="{{commodity.commodityId}}" >
                 <image src="{{commodity.profileImage}}" style="border-radius: 10px; width: 96rpx; height: 96rpx; border: 2rpx solid #e7e7e7;" lazy />
+                </navigator>
               </view>
               <view style="flex-grow: 1; ">
                 <view style="font-size: 32rpx; color: #333;">
@@ -73,7 +74,5 @@
     </view>
   </view>
 </t-popup>
-
-
   <image src="../img/icon/ic-img-market.png" class="cart-icon" bind:tap="handlePopup" data-cart="shoppingCart"></image>
 </view>
