--- a/miniapp/pages/userCenter/editProfile/editProfile.wxml
+++ b/miniapp/pages/userCenter/editProfile/editProfile.wxml
@@ -1,51 +1,31 @@
-<t-navbar t-class-placeholder="t-navbar-placeholder" t-class-content="t-navbar-content" title="标题文字">
-  <view slot="capsule" class="custom-capsule">
-  <t-icon
-      size="20"
-      bind:tap="onBack"
-      aria-role="button"
-      aria-label="返回"
-      name="chevron-left"
-      class="custom-capsule__icon back"
-    />
-    <t-icon
-      size="20"
-      bind:tap="onGoHome"
-      aria-role="button"
-      aria-label="首页"
-      name="home"
-      class="custom-capsule__icon home"
-    />
-  </view>
-</t-navbar>
-<t-cell-group class="on" theme="card">
-  <t-cell title="头像" image="{{avatar}}" leftIcon="" rightIcon="town"  hover arrow />
+<view class="block">
+  <t-navbar t-class-placeholder="t-navbar-placeholder" t-class-content="t-navbar-content" class="block" title="编辑资料" left-arrow bind:go-back="handleBack" />
+</view>
+
+<t-cell-group class="on" style="margin: 30rpx;" theme="card">
+  <t-cell title="头像" image="{{avatar}}" leftIcon="" rightIcon="town" hover arrow />
   <t-cell title="昵称" hover note="{{nickName}}" leftIcon="" hover arrow />
 </t-cell-group>
 
-<t-cell-group class="down" theme="card">
+<t-cell-group class="down" style="margin: 30rpx;" theme="card">
   <t-cell title="地址" hover note="{{address}}" leftIcon="town" hover arrow />
   <t-cell title="手机号" hover note="{{telephoneNumber}}" leftIcon="mobile" hover arrow />
   <t-cell title="个人偏好" hover note="{{preference}}" leftIcon="service" bind:tap="changelove" hover arrow />
 </t-cell-group>
+
+
 <view class="choosePart" wx:if="{{isOpen}}">
-<view>花叶类</view>
-<t-switch bind:tap="changevegetable" data-kind="花叶类" defaultValue="{{huaye}}" slot="note" />
-<view>辣椒类</view>
-<t-switch bind:tap="changevegetable" data-kind="辣椒类" defaultValue="{{lajiao}}" slot="note" />
-<view>水生根茎类</view>
-<t-switch bind:tap="changevegetable" data-kind="水生根茎类" defaultValue="{{shuisheng}}" slot="note" />
-<view>花菜类</view>
-<t-switch bind:tap="changevegetable" data-kind="花菜类" defaultValue="{{huacai}}" slot="note" />
-<view>食用菌</view>
-<t-switch bind:tap="changevegetable" data-kind="食用菌" defaultValue="{{jun}}" slot="note" />
-<view>茄类</view>
-<t-switch bind:tap="changevegetable" data-kind="茄类" defaultValue="{{qie}}" slot="note" />
-<t-button bind:tap="ok">保存</t-button>
+  <view>花叶类</view>
+  <t-switch bind:tap="changevegetable" data-kind="花叶类" defaultValue="{{huaye}}" slot="note" />
+  <view>辣椒类</view>
+  <t-switch bind:tap="changevegetable" data-kind="辣椒类" defaultValue="{{lajiao}}" slot="note" />
+  <view>水生根茎类</view>
+  <t-switch bind:tap="changevegetable" data-kind="水生根茎类" defaultValue="{{shuisheng}}" slot="note" />
+  <view>花菜类</view>
+  <t-switch bind:tap="changevegetable" data-kind="花菜类" defaultValue="{{huacai}}" slot="note" />
+  <view>食用菌</view>
+  <t-switch bind:tap="changevegetable" data-kind="食用菌" defaultValue="{{jun}}" slot="note" />
+  <view>茄类</view>
+  <t-switch bind:tap="changevegetable" data-kind="茄类" defaultValue="{{qie}}" slot="note" />
+  <t-button bind:tap="ok">保存</t-button>
 </view>
-
-
-
-  
-
-  
