--- a/miniapp/pages/home/home.wxss
+++ b/miniapp/pages/home/home.wxss
@@ -1,5 +1,9 @@
 /* pages/home.wxss */
 @import "../../app.wxss";
+
+page{
+  background-color: var(--main--gray--bg);
+}
  
 .e1111 {
   background-color: #f0f0f0;
@@ -26,8 +30,24 @@
 
 
 .posts{
-  height:400rpx;
-  width:750rpx;
+  height:340rpx;
+  width:720rpx;
+  margin: 15rpx;
+}
+
+
+
+/* 按钮样式 */
+.scan-button {
+  width: 100px;
+  height: 50px;
+  background-color: #007AFF;
+  color: #ffffff;
+  font-size: 24px;
+  text-align: center;
+  line-height: 200px; /* 使文字垂直居中 */
+  border-radius: 10px;
+  border: none;
 }
 
 .gobuy{
@@ -38,15 +58,21 @@
   width:45%;
   margin:10rpx;
 }
+
 scroll-view{
   height:250rpx;
   width:750rpx;
   flex-direction: row-reverse;
   justify-content:space-around;
 }
+
 scroll-view image{
   height:250rpx;
   margin:10rpx;
   align-items:center;
 }
 
+.display-end{
+  
+  
+}
