--- a/miniapp/pages/menu/menu.wxml
+++ b/miniapp/pages/menu/menu.wxml
@@ -17,7 +17,7 @@
     <t-side-bar value="{{sideBarIndex}}" bind:change="onSideBarChange">
       <t-side-bar-item wx:for="{{categories}}" wx:key="index" value="{{index}}" label="{{item.label}}" />
     </t-side-bar>
-    <view class="content" style="transform: translateY(-{{sideBarIndex * 100}}%)">
+    <view class="content" style="transform: translateY(-{{sideBarIndex * 100}})">
       <scroll-view class="section" wx:for="{{categories}}" scroll-y scroll-top="{{scrollTop}}" scroll-with-animation show-scrollbar="{{false}}">
         <view>
           <block wx:for="{{commodityNames}}" wx:key="index" wx:for-item="commodity">
