--- a/miniapp/pages/home/article/article.wxml
+++ b/miniapp/pages/home/article/article.wxml
@@ -7,7 +7,7 @@
     <text class="article-title">智链生鲜\n</text>
     <text class="article-date">SmartChainFresh：重新定义生鲜购物的未来</text>
   </view>
-  <view class="container">
+  <view >
     <view class="article-content">
       <view class="paragraph">
         随着科技的不断进步和人们生活品质的提升，传统的生鲜市场已不再能满足现代消费者对食品安全、质量保障和透明消费的需求。应运而生的智链生鲜，作为一款线上生鲜超市小程序，不仅满足了用户对高品质农产和水产品的需求，更通过创新的区块链技术，为消费者提供了一个全新的购物体验。
