--- a/miniapp/pages/home/home.wxss
+++ b/miniapp/pages/home/home.wxss
@@ -3,6 +3,7 @@
 
 page{
   background-color: var(--main--gray--bg);
+  background-image: "https://tax-test.oss-cn-qingdao.aliyuncs.com/%E6%96%B0%E5%BB%BA%E6%96%87%E4%BB%B6%E5%A4%B9/post1.png";
 }
  
 .e1111 {
@@ -70,9 +71,4 @@ scroll-view image{
   height:250rpx;
   margin:10rpx;
   align-items:center;
-}
-
-.display-end{
-  
-  
 }
