--- a/miniapp/pages/userCenter/purchaseOrder/purchaseOrder.wxml
+++ b/miniapp/pages/userCenter/purchaseOrder/purchaseOrder.wxml
@@ -1,2 +1,19 @@
-<!--pages/userCenter/purchaseOrder/purchaseOrder.wxml-->
-<text>pages/userCenter/purchaseOrder/purchaseOrder.wxml</text>
+<view class="all">
+  <!-- //导航栏 -->
+  <view class="block">
+    <t-navbar t-class-placeholder="t-navbar-placeholder" t-class-content="t-navbar-content" class="block" title="所有订单" left-arrow bind:go-back="handleback" />
+  </view>
+  
+
+  <block wx:for="{{orders}}" wx:key="id">
+    <view class="card" bind:tap="toMydingdan" data-order="{{item}}">
+      <view class="title">订单号:{{item.createTime}} </view>
+      <view class="block" wx:for="{{item.list}}" wx:for-item="product">
+        
+        <View class="itemName" > {{product.commodityName}}
+          <View class="itemPrice" > ￥{{product.price}}</View>
+        </View>
+      </view>
+    </view>
+  </block>
+</view>
